jenkins.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: binacs-cn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        labelName: jenkins
      containers:
      - name: jenkins-k8s
        image: jenkinsci/blueocean:latest
        ports:
          - name: jenkins-port
            containerPort: 8080
            protocol: TCP
          - name: jenkins-port2
            containerPort: 50000
            protocol: TCP
        volumeMounts:
        - name: jenkins-hostpath
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-hostpath
        hostPath:
          path: /var/jenkins_home

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: binacs-cn
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
  - name: jenkins
    port: 8080
    targetPort: 8080
  - name: jenkins-slave
    port: 50000
    targetPort: 50000
