ingress-rule.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "https"
  name: ingress-https
  namespace: binacs-cn
spec:
  rules:
  - host: binacs.cn
    http:
      paths:
      - backend:
          serviceName: binacs-cn-service
          servicePort: 443
  - host: grafana.binacs.cn
    http:
      paths:
      - backend:
          serviceName: monitor-service
          servicePort: 3000
  tls:
  - secretName: grpcs-secret
    hosts:
      - binacs.cn
  - secretName: grpcs-secret-grafana
    hosts:
      - grafana.binacs.cn

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
  name: ingress-http
  namespace: binacs-cn
spec:
  rules:
  - host: prometheus.binacs.cn
    http:
      paths:
      - backend:
          serviceName: monitor-service
          servicePort: 9090
  - host: jenkins.binacs.cn
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 8080
  - host: jaeger.binacs.cn
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 80
  - host: docs.binacs.cn
    http:
      paths:
      - backend:
          serviceName: docs-service
          servicePort: 3000
  - host: gitbook.binacs.cn
    http:
      paths:
      - backend:
          serviceName: gitbook-service
          servicePort: 4000
  - host: kiki.binacs.cn
    http:
      paths:
      - backend:
          serviceName: kiki-service
          servicePort: 3000
  tls:
  - secretName: grpcs-secret-prometheus
    hosts:
      - prometheus.binacs.cn
  - secretName: grpcs-secret-jenkins
    hosts:
      - jenkins.binacs.cn
  - secretName: grpcs-secret-jaeger
    hosts:
      - jaeger.binacs.cn
  - secretName: grpcs-secret-gitbook
    hosts:
      - gitbook.binacs.cn
  - secretName: grpcs-secret-docs
    hosts:
      - docs.binacs.cn
  - secretName: grpcs-secret-kiki
    hosts:
      - kiki.binacs.cn

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/whitelist-source-range: 10.244.0.0/16, xxxx
    nginx.ingress.kubernetes.io/backend-protocol: "http"
  name: ingress-http-pushgateway
  namespace: binacs-cn
spec:
  rules:
  - host: pushgateway.binacs.cn
    http:
      paths:
      - backend:
          serviceName: monitor-service
          servicePort: 9091

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: ingress-grpc-api
  namespace: binacs-cn
spec:
  rules:
  - host: api.binacs.cn
    http:
      paths:
      - backend:
         serviceName: binacs-cn-service
         servicePort: 9500
  tls:
  - secretName: grpcs-secret-api
    hosts:
      - api.binacs.cn

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    #nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: binacs-cn/basic-auth-novnc
    nginx.ingress.kubernetes.io/auth-realm: "I will catch you ^_^, by binacs"
  name: ingress-novnc
  namespace: binacs-cn
spec:
  rules:
  - host: novnc.binacs.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: novnc-novnc-base-service
          servicePort: 10000
  tls:
  - secretName: grpcs-secret-novnc
    hosts:
      - novnc.binacs.cn

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    #nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: binacs-cn/basic-auth-novnc
    nginx.ingress.kubernetes.io/auth-realm: "I will catch you ^_^, by binacs"
  name: ingress-vlc
  namespace: binacs-cn
spec:
  rules:
  - host: vlc.binacs.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: novnc-vlc-player-service
          servicePort: 10000
  tls:
  - secretName: grpcs-secret-vlc
    hosts:
      - vlc.binacs.cn
